--- a/client/src/components/App/styles.css
+++ b/client/src/components/App/styles.css
@@ -3,8 +3,9 @@
 }
 
 .app {
-	background-color: #fafbfc;
 	font-family: 'Oswald', sans-serif;
 	font-size: 14px;
+	display: flex;
+	flex-direction: column;
 	height: 100%;
 }
