--- a/client/src/components/App/styles.scss
+++ b/client/src/components/App/styles.scss
@@ -1,8 +1,11 @@
+@import 'styles/_colors';
+
 #root {
 	height: 100vh;
 }
 
 .app {
+	background-color: $lightBlue;
 	font-family: 'Oswald', sans-serif;
 	font-size: 14px;
 	display: flex;
