adds first draft Button ui component

--- a/client/src/components/Search/styles.scss
+++ b/client/src/components/Search/styles.scss
@@ -21,14 +21,23 @@
 }
 
 .form {
-	padding-left: 30px;
+	display: flex;
 }
 
 .input {
 	min-width: 500px;
 }
 
+.inputWrapper {
+	margin-right: $large;
+}
+
 .searchIcon {
 	font-size: 16px;
+	padding-right: $small;
+}
+
+.buttonIcon {
+	font-size: 20px;
 	padding-right: $small;
 }
