--- a/client/src/components/Search/styles.scss
+++ b/client/src/components/Search/styles.scss
@@ -1,10 +1,10 @@
 @import 'styles/_spacing';
 
 .search {
+	align-items: baseline;
 	display: flex;
-	justify-content: center;
-	align-items: center;
 	height: 100%;
+	justify-content: center;
 }
 
 .imageContainer {
@@ -37,7 +37,6 @@
 	padding-right: $small;
 }
 
-.buttonIcon {
-	font-size: 20px;
-	padding-right: $small;
-}
+// .buttonIcon {
+// 	font-size: 20px;
+// }
