--- a/client/src/styles/_spacing.scss
+++ b/client/src/styles/_spacing.scss
@@ -2,3 +2,12 @@ $xsmall: 4px;
 $small: 8px;
 $medium: 12px;
 $large: 20px;
+$xlarge: 32px;
+
+:export {
+	xsmall: $xsmall;
+	small: $small;
+	medium: $medium;
+	large: $large;
+	xlarge: $xlarge;
+}
